feat: add stock POST
